@@ -1,39 +1,0 @@
-# $NetBSD: Makefile.common,v 1.1.1.1 2011/07/24 08:50:40 cheusov Exp $
-# used by devel/lua-lrexlib-posix/Makefile
-# used by devel/lua-lrexlib-pcre/Makefile
-# used by devel/lua-lrexlib-oniguruma/Makefile
-#
-.include "../../devel/lua-lrexlib/Makefile.version"
-
-DISTNAME=	lrexlib-${VERSION}
-PKGNAME=	${LUA_PKGPREFIX}-lrexlib-${ENGINE}-${VERSION}
-CATEGORIES=	devel
-MASTER_SITES=	http://luaforge.net/frs/download.php/3599/
-EXTRACT_SUFX=	.zip
-
-HOMEPAGE=	http://luaforge.net/projects/lrexlib
-
-LICENSE=		mit
-
-USE_TOOLS+=		gmake
-USE_LIBTOOL=		yes
-
-BUILD_TARGET=		build_${ENGINE}
-TEST_TARGET=		test_${ENGINE}
-
-#MAKE_FILE=		makefile
-
-#
-PATCHDIR=		${.CURDIR}/../../devel/lua-lrexlib/patches
-DISTINFO_FILE=		${.CURDIR}/../../devel/lua-lrexlib/distinfo
-DESCR_SRC=		${.CURDIR}/../../devel/lua-lrexlib/DESCR
-
-MAKE_FLAGS+=		LIBS=${LIBS:Q}
-MAKE_FLAGS+=		LIBTOOL=${LIBTOOL:Q}
-MAKE_FLAGS+=		MODULES_DIR=${PREFIX}/${LUA_CDIR}
-
-INSTALLATION_DIRS+=	${LUA_CDIR}
-
-do-install:
-	${LIBTOOL} --mode=install ${INSTALL_PROGRAM} \
-	    ${WRKSRC}/src/${ENGINE_DIR}/rex_${ENGINE}.la ${DESTDIR}${PREFIX}/${LUA_CDIR}
