@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST.Linux,v 1.1 2012/01/03 11:33:32 obache Exp $
-lib/gstreamer-1.0/libgstdecklink.la
-lib/gstreamer-1.0/libgstlinsys.la
