@@ -1,0 +1,5 @@
+@comment $NetBSD$
+bin/lavrec
+bin/lavvideo
+bin/testrec
+lib/liblavrec.la
