@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.41 2011/10/12 17:43:14 hans Exp $
+# $NetBSD: Makefile,v 1.42 2012/10/25 06:57:06 asau Exp $
 
 DISTNAME=	xerces-c-3.1.1
 CATEGORIES=	textproc
@@ -32,6 +32,7 @@ CONFIGURE_ARGS+=	--enable-transcoder-iconv
 PLIST.gnuiconv=		yes
 CONFIGURE_ARGS+=	--enable-transcoder-gnuiconv
 .include "../../converters/libiconv/buildlink3.mk"
+LDFLAGS+=		-liconv
 .endif
 
 .include "../../mk/pthread.buildlink3.mk"
