@@ -1,4 +1,4 @@
-# $NetBSD: buildlink3.mk,v 1.12 2011/02/23 08:31:13 adam Exp $
+# $NetBSD: buildlink3.mk,v 1.13 2011/02/23 08:38:34 adam Exp $
 
 BUILDLINK_TREE+=	xerces-c
 
@@ -8,7 +8,10 @@ XERCES_C_BUILDLINK3_MK:=
 BUILDLINK_API_DEPENDS.xerces-c+=	xerces-c>=3.1.1
 BUILDLINK_PKGSRCDIR.xerces-c?=		../../textproc/xerces-c
 
+.include "../../mk/bsd.fast.prefs.mk"
+.if ${OPSYS} != "Darwin" && ${OPSYS} != "SunOS"
 .include "../../converters/libiconv/buildlink3.mk"
+.endif
 .endif	# XERCES_C_BUILDLINK3_MK
 
 BUILDLINK_TREE+=	-xerces-c
