@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.4025 2012/12/30 12:59:05 kleink Exp $
+$NetBSD: CHANGES-2012,v 1.4026 2012/12/31 02:27:47 taca Exp $
 
 # PLEASE NOTE THAT THE PKGSRC REPOSITORY IS FROZEN FOR INFRASTRUCTURE
 # CHANGES, CHANGES TO NON-LEAF PACKAGES, and FOR NEW PACKAGES.
@@ -6205,3 +6205,4 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated x11/xkbset to 0.5nb1 [dholland 2012-12-30]
 	Updated textproc/p5-Text-vCard to 2.13 [kleink 2012-12-30]
 	Updated www/geeklog to 1.8.2 [taca 2012-12-31]
+	Updated multimedia/mjpegtools to 2.0.0nb1 [sbd 2012-12-31]
